# hisihook

./: CMakeLists.txt  README.md  library.cpp
include/: hi_comm_video.h  hi_common.h  hi_math.h  hi_sdk_include.h  library.h  my_string.h  sample_comm.h
